Kubernetes Files/service_Nodeport.yaml
kind: Service
apiVersion: v1
metadata:
  name: kubernetes-django-service
spec:
  selector:
    app: django-backend
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: NodePort
