Kubernetes Files/service_loadbalancer.yaml
kind: Service
apiVersion: v1
metadata:
  name: kubernetes-django-service
spec:
  selector:
    app: django-backend
  ports:
    - port: 8000
      targetPort: 8000
  type: LoadBalancer
